@@ -20,9 +20,7 @@ package com.graphhopper.routing.util;
 
 import com.graphhopper.reader.OSMWay;
 import com.graphhopper.storage.*;
-import com.graphhopper.util.EdgeIteratorState;
-import com.graphhopper.util.GHUtility;
-import com.graphhopper.util.Helper;
+import com.graphhopper.util.*;
 import org.junit.Test;
 
 import static org.junit.Assert.*;
@@ -93,5 +91,44 @@ public class Bike2WeightFlagEncoderTest extends BikeFlagEncoderTest
         assertEquals(10, encoder.getReverseSpeed(flags), .1);
         assertFalse(encoder.isForward(flags));
         assertTrue(encoder.isBackward(flags));
+    }
+
+    @Test
+    public void testRoutingFailsWithInvalidGraph_issue665()
+    {
+        GraphHopperStorage graph = new GraphHopperStorage(
+                new RAMDirectory(), em, true, new GraphExtension.NoOpExtension());
+        graph.create(100);
+
+        OSMWay way = new OSMWay(0);
+        way.setTag("route", "ferry");
+
+        long includeWay = em.acceptWay(way);
+        long relationFlags = 0;
+        long wayFlags = em.handleWayTags(way, includeWay, relationFlags);
+        graph.edge(0, 1).setDistance(247).setFlags(wayFlags);
+
+        assertTrue(isGraphValid(graph, encoder));
+    }
+
+    private boolean isGraphValid( Graph graph, FlagEncoder encoder )
+    {
+        EdgeExplorer explorer = graph.createEdgeExplorer();
+
+        // iterator at node 0 considers the edge 0-1 to be undirected
+        EdgeIterator iter0 = explorer.setBaseNode(0);
+        iter0.next();
+        boolean iter0flag
+                = iter0.getBaseNode() == 0 && iter0.getAdjNode() == 1
+                && iter0.isForward(encoder) && iter0.isBackward(encoder);
+
+        // iterator at node 1 considers the edge 1-0 to be directed
+        EdgeIterator iter1 = explorer.setBaseNode(1);
+        iter1.next();
+        boolean iter1flag
+                = iter1.getBaseNode() == 1 && iter1.getAdjNode() == 0
+                && iter1.isForward(encoder) && iter1.isBackward(encoder);
+
+        return iter0flag && iter1flag;
     }
 }
